hdone/objects/Appointment_Type__c.object
<CustomObject>
    <description>Setup for type of appointment</description>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location for Appointment Types. Enables different lengths of appointments based on location, individual, etc.</description>
        <inlineHelpText>Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Appointment Types</relationshipLabel>
        <relationshipName>Appointment_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Appointment Type is active</description>
        <inlineHelpText>Indicates if Appointment Type is active</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Minutes__c</fullName>
        <description>Average number of minutes for type of appointment. Used for appointment scheduling</description>
        <inlineHelpText>Average number of minutes for appointment type</inlineHelpText>
        <label>Number of Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Recertification</fullName>
                </value>
                <value>
                    <fullName>Information Only</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATN-{000000}</displayFormat>
        <label>Appointment Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Types</pluralLabel>
    <recordTypes>
        <fullName>In_Person</fullName>
        <active>true</active>
        <description>Appointment type setup for In Person</description>
        <label>In Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Appointment type setup for Phone</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website</fullName>
        <active>true</active>
        <description>Appointment type setup for Website</description>
        <label>Website</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AppointmentTypeManual</fullName>
        <active>true</active>
        <description>Checks if Type field is Manual</description>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;Manual&apos;),  (Number_of_Minutes__c &lt;&gt; 0), OR( Number_of_Minutes__c &gt; 0 , NOT(ISBLANK(Number_of_Minutes__c ))))

/*Checks to see if Type field is Manual and if a value in Number of Minutes */</errorConditionFormula>
        <errorDisplayField>Number_of_Minutes__c</errorDisplayField>
        <errorMessage>Predefined values cannot be entered for Manual appointments. Appointment Start and End times are manually entered for these. Please remove the value in this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppointmentTypeNotManual</fullName>
        <active>true</active>
        <description>Checks Appointment Type to ensure values entered into Number of Minutes when not Manual.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL( Type__c , &apos;Manual&apos;)),  OR(Number_of_Minutes__c &lt; 5,Number_of_Minutes__c &gt;240, ISBLANK(Number_of_Minutes__c )))

/*Checks to see if Type field is not Manual and if no value in Number of Minutes */</errorConditionFormula>
        <errorDisplayField>Number_of_Minutes__c</errorDisplayField>
        <errorMessage>Unless the type of appointment is Manual then appointments must be at least 5 minutes and less than 240 minutes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocationChanged</fullName>
        <active>true</active>
        <description>Checks if location is changed on Appointment Type. Do not want this. Should create a new one instead.</description>
        <errorConditionFormula>ISCHANGED( Address_Type__c )</errorConditionFormula>
        <errorDisplayField>Address_Type__c</errorDisplayField>
        <errorMessage>Locations cannot be changed on these records. Please create a new record instead if you want to assign values to a different location.</errorMessage>
    </validationRules>
</CustomObject>